@@ -22,7 +22,7 @@
     <vendor>Pentaho</vendor>
     <guava.version>17.0</guava.version>
     <driver.version.major>${project.version.major}</driver.version.major>
-    <maven-failsafe-plugin.argLine>-Duser.language=en -Duser.country=US</maven-failsafe-plugin.argLine>
+    <maven-failsafe-plugin.argLine>-Duser.language=en -Duser.country=US -Djava.locale.providers=COMPAT,SPI</maven-failsafe-plugin.argLine>
   </properties>
   <dependencies>
     <dependency>
